updated swagger and latest API integration
